<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/link_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="30sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/statusImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_link_connecting"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/message_link_connecting"
            app:layout_constraintBottom_toBottomOf="@+id/statusImage"
            app:layout_constraintStart_toEndOf="@+id/statusImage"
            app:layout_constraintTop_toTopOf="@+id/statusImage" />

        <TextView
            android:id="@+id/linkCut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/text_link_cut"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/statusText" />

        <TextView
            android:id="@+id/linkSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_link_setup"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/linkCut"
            app:layout_constraintEnd_toStartOf="@+id/linkCut"
            app:layout_constraintTop_toTopOf="@+id/linkCut" />

        <TextView
            android:id="@+id/linkRecording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_link_recording"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@+id/linkSetup"
            app:layout_constraintEnd_toStartOf="@+id/linkSetup"
            app:layout_constraintTop_toTopOf="@+id/linkSetup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>