<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FFFFFF"
    tools:context=".ui.user.UserFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/contentDescription_connection_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/información"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/boder"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/nameTextView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/IDTextView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/nameTextView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameTextView2"
            app:layout_constraintTop_toTopOf="@+id/nameTextView2" />

        <TextView
            android:id="@+id/IDTextView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/text_UID"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView2" />

        <TextView
            android:id="@+id/IDTextView1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/IDTextView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/IDTextView2"
            app:layout_constraintTop_toTopOf="@+id/IDTextView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/boder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar">

        <TextView
            android:id="@+id/temporaryIDTextView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/text_TID"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/temporaryIDTextView1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/temporaryIDTextView2"
            app:layout_constraintEnd_toStartOf="@+id/checkCodeTextView2"
            app:layout_constraintStart_toEndOf="@+id/temporaryIDTextView2"
            app:layout_constraintTop_toTopOf="@+id/temporaryIDTextView2" />

        <TextView
            android:id="@+id/checkCodeTextView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/text_link_check_code"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/temporaryIDTextView1"
            app:layout_constraintEnd_toStartOf="@+id/checkCodeTextView1"
            app:layout_constraintTop_toTopOf="@+id/temporaryIDTextView1" />

        <TextView
            android:id="@+id/checkCodeTextView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/checkCodeTextView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkCodeTextView2" />

        <TextView
            android:id="@+id/typeTextView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/text_net_type"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/typeTextView1"
            app:layout_constraintEnd_toStartOf="@+id/typeTextView1"
            app:layout_constraintTop_toTopOf="@+id/typeTextView1" />

        <TextView
            android:id="@+id/typeTextView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/checkCodeTextView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/text_net_parameter"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/temporaryIDTextView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>